<resources>
    <string name="app_name" translatable="false">BSUT studApp</string>
    <string name="auditories">Аудитории</string>
    <string name="dist">Dist\'анционка</string>
    <string name="question_to_rector">Вопрос ректору</string>
    <string name="obsch_org">Общественные организации</string>
    <string name="site">Сайт университета</string>
    <string name="timetable">Расписание</string>

    <!-- Filter summaries -->
    <string name="filter_military">Военная кафедра</string>
    <string name="filter_pogroupa_title">Подгруппа</string>
    <string name="filter_pogroupa">Введите подгруппу</string>

    <!-- Fragment titles -->
    <string name="title_auditories_fragment">Схема аудиторий</string>
    <string name="title_main_fragment">BSUT one love</string>
    <string name="title_timetable">Расписание</string>

    <!-- Para types localization -->
    <string name="para_laboratory">Лаба</string>
    <string name="para_lecture">Лекция</string>
    <string name="para_practice">ПЗ</string>
    <string name="para_other">Другое</string>

    <!-- Week days localization -->
    <string name="week_day_monday">Понедельник</string>
    <string name="week_day_tuesday">Вторник</string>
    <string name="week_day_wednesday">Среда</string>
    <string name="week_day_thursday">Четверг</string>
    <string name="week_day_friday">Пятница</string>
    <string name="week_day_saturday">Суббота</string>
    <string name="week_day_sunday">Воскресенье</string>

    <!-- Week modes localization -->
    <string name="week_upper">Над</string>
    <string name="week_lower">Под</string>

    <!-- Toolbar menu items -->
    <string name="change_theme">Сменить тему</string>
    <string name="refresh_timetable">Обновить расписание</string>
    <string name="settings">Настройки</string>

    <!-- Toasts -->
    <string name="toast_actual_version">You already have an actual version</string>
    <string name="toast_error">Ошибка!</string>
    <string name="toast_refresh_podgroupa">Подгруппа обновлена</string>
    <string name="toast_refresh_start">Расписание обновляется</string>
    <string name="toast_refresh_sucess">Успешно обновлено</string>
</resources>