<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <ImageView
        android:id="@+id/gradient"
        android:layout_width="0dp"
        android:layout_height="@dimen/logoSize"
        android:src="@drawable/gradient_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/logoSize"
        android:layout_height="@dimen/logoSize"
        android:layout_marginStart="@dimen/logoCornerMargin"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:id="@+id/go_to_news"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/newsMargin"
        android:cropToPadding="true"

        android:src="@drawable/news"
        app:layout_constraintBottom_toTopOf="@+id/go_to_site"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gradient"
        app:layout_constraintVertical_bias="0.411" />

    <Button
        android:id="@+id/go_to_site"
        android:text="@string/site"
        style="@style/ButtonMainScreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/go_to_timetable"
        style="@style/ButtonMainScreen"
        android:text="@string/timetable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/go_to_site" />

    <Button
        android:id="@+id/go_to_dist"
        style="@style/ButtonMainScreen"
        android:text="@string/dist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/go_to_timetable" />

    <Button
        android:id="@+id/go_to_rektor"
        style="@style/ButtonMainScreen"
        android:text="@string/question_to_rector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/go_to_dist" />

    <Button
        android:id="@+id/go_to_obsch_org"
        style="@style/ButtonMainScreen"
        android:text="@string/obsch_org"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/go_to_rektor" />

    <Button
        android:id="@+id/go_to_auditories"
        style="@style/ButtonMainScreen"
        android:text="@string/auditories"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/go_to_obsch_org" />

</androidx.constraintlayout.widget.ConstraintLayout>